--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "files": [
+        "dist",
+        "LICENSE",
+        "package.json",
+        "README.md"
+    ],
     "scripts": {
         "build": "tsup",
         "format": "prettier ./src --write --ignore-path=.prettierignore",
