--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
         "name": "e60m5ss",
         "url": "https://github.com/e60m5ss"
     },
-    "main": "./dist/index.js",
+    "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
+    "types": "./dist/index.d.mts",
     "files": [
         "dist",
         "LICENSE",
         "package.json",
         "README.md"
     ],
+    "exports": {
+        ".": {
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.cjs",
+            "types": {
+                "import": "./dist/index.d.mts",
+                "require": "./dist/index.d.cts",
+                "default": "./dist/index.d.cts"
+            }
+        }
+    },
     "scripts": {
-        "build": "tsup",
+        "build": "tsdown",
         "format": "prettier ./src --write --ignore-path=.prettierignore",
         "lint": "tsc --noEmit; prettier ./src --check --ignore-path=.prettierignore",
-        "prepublish": "tsup"
+        "prepublish": "tsdown"
     },
     "prettier": {
         "filepath": "src/**/*.ts",
@@ -34,7 +46,7 @@
     "devDependencies": {
         "@types/node": "^25.1.0",
         "prettier": "^3.8.1",
-        "tsup": "^8.5.1",
+        "tsdown": "^0.20.1",
         "typescript": "^5.9.3"
     }
 }
